eks/examples/aws-load-balancer-controller.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
