eks/examples/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: my-secret-volume
          secret:
            secretName: my-app-secret
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
