eks/examples/nexusalbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-artifactory-service
  namespace: default
  labels:
    app: nexus-server
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-attributes: load_balancing.cross_zone.enabled=true
    service.beta.kubernetes.io/aws-load-balancer-manage-backend-security-group-rules: 'false'
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: LoadBalancer  # Change the service type to LoadBalancer
  selector:
    app: nexus-server
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
