eks/examples/nexusservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-clusterip-service
  namespace: default
  labels:
    app: nexus-server
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
    #service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:123456789012:certificate/abcdefgh-1234-5678-abcd-1234567890ab"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
spec:
  type: ClusterIP   # Changed to ClusterIP type
  selector:
    app: nexus-server
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
