eks/examples/ingressl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nexus
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: sg-04a812613fb09706f
    #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/subnets: subnet-07e55a41778893fae, subnet-06f4d11d8e3e10a6b, subnet-0c692fa6f06622f44
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /nexus
            pathType: Prefix
            backend:
              service:
                name: nexus-clusterip-service
                port:
                  number: 8081
